# mcwiki

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  README.md  mypy.ini  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
mcwiki/: __init__.py  extractor.py  page.py  text.py  tree.py  utils.py
tests/: conftest.py  test_mcwiki.py
tests/snapshots/: mcwiki__advancement_entity_killed_player__0.txt  mcwiki__advancement_file_format__0.txt  mcwiki__advancement_headings__0.json  mcwiki__advancement_item_used_on_block__0.json  mcwiki__advancement_slept_in_bed__0.txt  mcwiki__data_pack_folder_structure__0.txt  mcwiki__data_pack_headings__0.json  mcwiki__data_pack_mcmeta__0.txt  mcwiki__data_pack_tag__0.txt  mcwiki__loot_table_functions__0.txt  mcwiki__loot_table_functions__1.txt  mcwiki__loot_table_tags__0.txt  mcwiki__predicate__0.txt  mcwiki__predicate__1.txt
typings/: bs4.pyi
