[tool.poetry]
name = "mcwiki"
version = "0.1.1"
description = "A scraping library for the Minecraft Wiki"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/mcwiki"
repository = "https://github.com/vberlier/mcwiki"
documentation = "https://github.com/vberlier/mcwiki"

readme = "README.md"

keywords = [
  "mcwiki",
  "minecraft",
  "scraping",
  "wiki",
  "minecraft-wiki"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"
pylint = "^2.6.0"
pytest = "^6.1.2"
pytest-insta = "^0.1.1"
rope = "^0.18.0"
isort = "^5.6.4"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
